--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.3"
+    "http": "^0.0.1-security",
+    "mongoose": "^8.4.4"
   }
 }
